--- a/index.html
+++ b/index.html
@@ -3,23 +3,22 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" href="./src/assets/grocery-store.svg" />
-    <link
-  rel="stylesheet"
-  type="text/css"
-  charset="UTF-8"
-  href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.min.css"
-/>
-<link
-  rel="stylesheet"
-  type="text/css"
-  href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick-theme.min.css"
-/>
+ 
+
+
+    <link rel="preload" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+    <link rel="preload" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick-theme.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+
+    <noscript>
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.min.css">
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick-theme.min.css">
+    </noscript>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React</title>
   </head>
   <body class=" dark:bg-gray-900">
     <div id="root"></div>
-    <script src="./node_modules/flowbite/dist/flowbite.min.js"></script>
-    <script type="module" src="/src/main.jsx"></script>
+    <script defer src="./node_modules/flowbite/dist/flowbite.min.js"></script>
+    <script defer type="module" src="/src/main.jsx"></script>
   </body>
 </html>
