--- a/index.html
+++ b/index.html
@@ -15,6 +15,6 @@
   <body class=" dark:bg-gray-900">
     <div id="root"></div>
     <script defer type="module" src="/src/main.jsx"></script>
-    <script defer src="./node_modules/flowbite-react\node_modules\flowbite\dist\flowbite.min.js"></script>
+    <script defer type="text/babel" src="./node_modules/flowbite-react\node_modules\flowbite\dist\flowbite.min.js"></script>
   </body>
 </html>
