--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
   </head>
   <body class=" dark:bg-gray-900">
     <div id="root"></div>
-    <script defer type="module" src="/src/main.jsx"></script>
+    <script src="./node_modules\flowbite\dist\flowbite.min.js"></script>
     <script defer src="./node_modules/flowbite-react\node_modules\flowbite\dist\flowbite.min.js"></script>
+    <script defer type="module" src="/src/main.jsx"></script>
   </body>
 </html>
