--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body class=" dark:bg-gray-900">
     <div id="root"></div>
     <script src="./node_modules\flowbite\dist\flowbite.min.js"></script>
-    <script defer src="./node_modules/flowbite-react\node_modules\flowbite\dist\flowbite.min.js"></script>
+    <!-- <script defer src="./node_modules/flowbite-react\node_modules\flowbite\dist\flowbite.min.js"></script> -->
     <script defer type="module" src="/src/main.jsx"></script>
   </body>
 </html>
